KeepassDX (2.5.0.0beta20)
 * Fix a major bug that displays an entry history

KeepassDX (2.5.0.0beta19)
 * Add lock button always visible
 * New connection workflow
 * Code refactored in Kotlin
 * Better notification implementation
 * Better views for large screen
 * Magikeyboard enhancement
 * Fix Recycle Bin
 * Fix memory when load database
 * Fix small bugs

KeepassDX (2.5.0.0beta18)
 * New recent databases views
 * New information dialog
 * Custom fields for the Magikeyboard
 * Timeout for the Magikeyboard
 * Long press for keyboard selection
 * Fix memory when opening the database
 * Memory management for attachments

KeepassDX (2.5.0.0beta17)
 * Fix font and search

KeepassDX (2.5.0.0beta16)
 * New search in a single fragment
 * Search suggestions
 * Added the display of usernames
 * Added translations
 * Fix read-only mode
 * Fix parcelable / toolbar / back

KeepassDX (2.5.0.0beta15)
 * Read only mode
 * Best group recovery for the navigation fragment
 * Fix copies in notifications
 * Fix orientation
 * Added translations

KeepassDX (2.5.0.0beta14)
 * Optimize all the memory with parcelables / fix search

KeepassDX (2.5.0.0beta13)
 * Fix memory issue with parcelable (crash in beta12 version)

KeepassDX (2.5.0.0beta12)
 * Added the Magikeyboard to fill the forms (settings still in development)
 * Added move and copy for groups and entries
 * New navigation in a single screen / new animations between activities
 * New icons for the material pack / vectorization
 * New adaptive launcher icon
 * Icons depends now of setting of list items
 * Added a setting to disable the open button when no password is identified
 * Added a setting to disable the education screens
 * Added a setting to disable the copy of protected custom fields
 * Fix the fingerprint recognition (WARNING : The keystore is reinit, you must delete the old keys)
 * Fix small bugs

KeepassDX (2.5.0.0beta11)
 * Fix crash in beta10 version

KeepassDX (2.5.0.0beta10)