@@ -11,8 +11,8 @@ android {
         applicationId "com.kunzisoft.keepass"
         minSdkVersion 14
         targetSdkVersion 27
-        versionCode = 20
-        versionName = "2.5.0.0beta20"
+        versionCode = 21
+        versionName = "2.5.0.0beta21"
         multiDexEnabled true
 
         testApplicationId = "com.kunzisoft.keepass.tests"
