@@ -1,0 +1,9 @@
+ * Add lock button always visible
+ * New connection workflow
+ * Code refactored in Kotlin
+ * Better notification implementation
+ * Better views for large screen
+ * Magikeyboard enhancement
+ * Fix Recycle Bin
+ * Fix memory when load database
+ * Fix bugs that displays bad entries and groups (2.5.0.0beta19-20)
